yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testcode-deployment
  namespace: testcode-namespace
  labels:
    app: testcode
spec:
  replicas: 2
  selector:
    matchLabels:
      app: testcode
  template:
    metadata:
      labels:
        app: testcode
    spec:
      # serviceAccountName: secrets-sa     # IRSA 적용 필요 없음 (pod의 app.py에 Secrets Manager에 직접 접근하는 코드 없음)
      containers:
      - name: testcode-container
        image: 707677861059.dkr.ecr.ap-northeast-2.amazonaws.com/testcodeecr:latest
        ports:
        - containerPort: 5000
