yaml/ingress-alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testcode-ingress
  namespace: testcode-namespace
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing   # 내부용이면 "internal"
    alb.ingress.kubernetes.io/target-type: ip          # IP 모드 (또는 "instance")
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/group.name: "testcode-ingress-group"
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: testcode-svc
            port:
              number: 8080
